# descry

./: Cargo.toml  README.md  a.txt  descry.sh  descry.yaml
scripts/: all.sh  common.sh  else.sh  ping.sh  push.sh  test_arguments.sh  watch.sh
src/: lib.rs  main.rs
src/descry/: handler.rs  lib.rs  mod.rs
tests/: test.rs
