[package]
name = "descry"
version = "0.0.4"
authors = ["bennjii"]
description = "GitHub Webhook Listener and Runner"
keywords = ["github", "webhook"]
edition = "2018"
license = "MIT"

[badges]

[dependencies]
colored = "2.0.0"
log = "~0.4"
clap = { version = "~2.33", default-features = false, features = [] }
hyper = "~0.12"
yaml-rust = "~0.4"
run_script = "~0.10.0"
pretty_env_logger = "~0.3"

[dependencies.rifling]
version = "~0.4"
default-features = false
features = [
    "hyper-support",
    "logging",
    "crypto-use-rustcrypto",
    "content-type-urlencoded"
]

[profile.release]
lto = true
debug = false
panic = 'abort'
rpath = false
opt-level = 'z'
codegen-units = 1
debug-assertions = false